# dailyai

./: .env.template  .gitignore
backend/: config.py  main.py  pyproject.toml  railway.toml
backend/models/: schemas.py
backend/routers/: auth.py  chat.py  health.py
backend/services/: agent_service.py  calendar_service.py  gmail_service.py  google_auth.py
backend/tools/: calendar_tools.py  gmail_tools.py
frontend/: index.html  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatWindow.tsx  Header.tsx  LoadingIndicator.tsx  LoginButton.tsx  MessageBubble.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useWebSocket.ts
frontend/src/types/: index.ts
scripts/: setup.sh  start.sh  stop.sh
